# stake-and-steal

./: README.md  package-lock.json
.history/: .env_20260119155608.testnet  README_20260119132537.md
.history/docs/linera/: 04-microchains_20260119120637.md  08-creating-project_20260119120858.md  09-application-state_20260119120927.md  12-writing-service_20260119121116.md  13-deploying-applications_20260119121145.md  15-calling-other-apps_20260119121308.md  16-testing_20260119121347.md  19-frontend-interacting_20260119121603.md  21-running-devnet_20260119121724.md  23-evm-contracts_20260119121840.md  24-cli-reference_20260119121909.md  25-glossary_20260119121941.md
.history/frontend/: index_20260119132623.html  tailwind.config_20260119132615.js  vite.config_20260119132556.ts
.history/frontend/src/: App_20260119132646.tsx  index_20260121095639.css  main_20260119132628.tsx
docs/: DEPLOYMENT.md
docs/linera/: 01-overview.md  02-installation.md  03-hello-linera.md  05-applications.md  06-wallets-and-node-service.md  07-design-patterns.md  10-defining-abi.md  11-writing-contract.md  14-cross-chain-messages.md  17-frontend-overview.md  18-frontend-setup.md  20-frontend-wallets.md  22-connecting-testnet.md  README.md
frontend/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
scripts/: deploy-testnet.ps1
smart_contract/: Cargo.toml
smart_contract/.cargo/: config.toml
smart_contract/src/: contract.rs  lib.rs  service.rs  state.rs
(+179 files in other folders)
