[package]
name = "stake-and-steal"
version = "0.1.0"
edition = "2021"
description = "Stake and Steal - A GameFi application on Linera with Yield Farming and PvP Stealing mechanics"
authors = ["RedZero Team"]

[dependencies]
async-graphql = { version = "7.0.11", default-features = false }
async-trait = "0.1"
linera-sdk = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8", default-features = false }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test"] }
tokio = { version = "1.38", features = ["rt", "sync", "macros"] }

[[bin]]
name = "stake_and_steal_contract"
path = "src/contract.rs"

[[bin]]
name = "stake_and_steal_service"
path = "src/service.rs"

[features]
default = []
test = ["linera-sdk/test"]
